<resources>
    <string name="app_name">My Application</string>
    <string name="user">用戶名</string>
    <string name="password_string">密碼</string>
    <string name="login">登陸</string>

    <string name="agree_rule">我同意遵守使用條款</string>
    <string name="user_name">使用者名稱</string>
    <string name="user_password">使用者密碼</string>
    <string name="user_password_confirm">請再次確認密碼</string>
    <string name="email">電子郵件</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">電子郵件</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登陸</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">註冊</string>
    <string name="sign_up_title">開始註冊</string>


    <!-- 進度條的字串 -->
    <string name="str_dialog_title">請稍候</string>
    <string name="str_dialog_body">正在登陸中</string>

    <!-- 密碼錯誤時狀態框文字-->
    <string name="password_error_dialog_title">錯誤</string>
    <string name="password_error_dialog_text">您忘記輸入帳號或密碼，請重新輸入</string>
    <string name="yes">好</string>

    <!--登錄狀態彈出-->
    <string name="login_error_404_title">密碼錯誤</string>
    <string name="login_error_404_text">您輸入的賬號或密碼有誤，請重新輸入</string>
    <string name="login_error_403_title">對不起</string>
    <string name="login_error_403_text">您輸入的賬號已被暫停使用，請與客服聯絡</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
