<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kebohan.myapplication.LoginActivity"
    android:background="@drawable/colorful_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableBottom="@drawable/line"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <EditText
                    android:id="@+id/userpassword"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableBottom="@drawable/line"
                    android:ems="10"
                    android:hint="@string/user_password"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/login_button"
                    android:layout_toStartOf="@+id/login_button"
                    android:orientation="vertical">

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/action_sign_in" />

                    <Button
                        android:id="@+id/sign_in_button"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_alignLeft="@+id/login_button"
                        android:layout_alignStart="@+id/login_button"
                        android:layout_below="@+id/login_button"
                        android:layout_marginTop="17dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/sign_up" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>
